@@ -234,6 +234,34 @@ name|lucene
 operator|.
 name|index
 operator|.
+name|IndexWriter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|IndexWriterConfig
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
 name|LeafReader
 import|;
 end_import
@@ -433,6 +461,20 @@ operator|.
 name|search
 operator|.
 name|TopDocs
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|UsageTrackingQueryCachingPolicy
 import|;
 end_import
 
@@ -2692,6 +2734,181 @@ operator|.
 name|toString
 argument_list|()
 argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testIsConsideredCostlyByQueryCache
+specifier|public
+name|void
+name|testIsConsideredCostlyByQueryCache
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriterConfig
+name|iwc
+init|=
+name|newIndexWriterConfig
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|w
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|iwc
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|10000
+condition|;
+operator|++
+name|i
+control|)
+block|{
+name|w
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+block|}
+name|w
+operator|.
+name|forceMerge
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+name|DirectoryReader
+name|reader
+init|=
+name|DirectoryReader
+operator|.
+name|open
+argument_list|(
+name|w
+argument_list|)
+decl_stmt|;
+name|w
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|TermsQuery
+name|query
+init|=
+operator|new
+name|TermsQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"foo"
+argument_list|,
+literal|"bar"
+argument_list|)
+argument_list|,
+operator|new
+name|Term
+argument_list|(
+literal|"foo"
+argument_list|,
+literal|"baz"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|UsageTrackingQueryCachingPolicy
+name|policy
+init|=
+operator|new
+name|UsageTrackingQueryCachingPolicy
+argument_list|()
+decl_stmt|;
+name|assertFalse
+argument_list|(
+name|policy
+operator|.
+name|shouldCache
+argument_list|(
+name|query
+argument_list|,
+name|getOnlySegmentReader
+argument_list|(
+name|reader
+argument_list|)
+operator|.
+name|getContext
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|policy
+operator|.
+name|onUse
+argument_list|(
+name|query
+argument_list|)
+expr_stmt|;
+name|policy
+operator|.
+name|onUse
+argument_list|(
+name|query
+argument_list|)
+expr_stmt|;
+comment|// cached after two uses
+name|assertTrue
+argument_list|(
+name|policy
+operator|.
+name|shouldCache
+argument_list|(
+name|query
+argument_list|,
+name|getOnlySegmentReader
+argument_list|(
+name|reader
+argument_list|)
+operator|.
+name|getContext
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|reader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
 expr_stmt|;
 block|}
 block|}
